<resources>
    <string name="app_name">Абитуриент</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Покровский колледж</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Абитуриент</string>
    <string name="menu_gallery">Профиль</string>
    <string name="menu_slideshow">Список учреждений</string>
    <string name="menu_blank">О учреждении</string>
    <string name="menu_soc_gar">Социальные гарантии</string>
    <string name="menu_pro">Профессии</string>

    <string name="home_second">Home Second</string>
    <string name="Name">Введите Имя</string>
    <string name="SecondName">Фамилия</string>
    <string name="ThirdName">Отчество</string>
    <string name="Test">Пройти Тест</string>

    <string name="ysht">Якутский сельскохозяйственный техникум</string>
    <string name="CD">Якутский колледж технологии и дизайна традиционных промыслов народов Якутии</string>
    <string name="CC">Якутский колледж культуры и искусств Республики Саха (Якутия)</string>
    <string name="yipk">Якутский индустриально-педагогический колледж</string>
    <string name="ykst">Якутский коммунально-строительный техникум</string>
    <string name="ykse">Якутский колледж связи и энергетики имени П.И. Дудкина</string>
    <string name="pokrovsk">Покровский колледж</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="YSHT">" ГБПОУ РС (Я) "\n"«Якутский сельскохозяйственный техникум»"</string>
    <string name="YM">"Юридический адрес 677000, Республика Саха (Якутия), г. Якутск, ул. Пояркова, д. 15  "</string>
    <string name="FM">Фактический адрес 677000, Республика Саха (Якутия), г. Якутск, ул. Пояркова, д. 15</string>
    <string name="CN">Контактные телефоны: (4112) 34-11-35 (приемная директора), 34-13-76 (бухгалтерия), 34-11-94 (учебная часть), 34-18-95 (заочный отдел).</string>
    <string name="EMail">Официальный сайт: <a href="http://ysxt.ru">http://ysxt.ru</a></string>
    <string name="mail">Адрес электронной почты: ysxt@gov14.ru.</string>
    <string name="professii">Профессии</string>
    <string name="specialnosti">Специальности</string>
    <string name="povar">Повар</string>
    <string name="programmist">Программист</string>
    <string name="P_hol">Повар холодного цеха</string>
    <string name="P_gor">Повар горячего цеха</string>
    <string name="pekar">Пекарь</string>
    <string name="info">Информация</string>

    <string name="adress_PC">678000, Республика Саха (Якутия),  Хангаласский улус, г.Покровск,  ул. Братьев Ксенофонтовых, 31</string>
    <string name="phone_PC">"тел/факс: 8 (41144) 4-52-42"</string>
    <string name="email_PC">pk_pokrovsk@gov14.ru</string>
    <string name="name_dir_PC">ХАБАРОВ  Владислав  Гаврильевич</string>
    <string name="dolznost">Директор</string>
    <string name="college_PC">ГБПОУ РС (Я) «ПОКРОВСКИЙ КОЛЛЕДЖ»</string>
    <string name="site_PC">http://college-pokrovsk.ru/</string>
    <string name="points">Прох. балл</string>
    <string name="place">Бюдж. места</string>
    <string name="cost">Стоимость</string>
    <string name="s21_01_10">Ремонтник горного оборудования</string>
    <string name="nazvanie">Название</string>

    <string name="APT">ГАПОУ РС (Я) "Алданский политехнический техникум"</string>
    <string name="MRTK">ГАПОУ РС (Я) "Региональный технический колледж в г. Мирном"</string>
    <string name="UTYK">ГАПОУ РС(Я) \"Южно-Якутский технологический колледж\"</string>

    <string name="APT_mini">"Алданский политехнический техникум"</string>
    <string name="MRTK_mini">"Региональный технический колледж в г. Мирном"</string>
    <string name="UTYK_mini">"Южно-Якутский технологический колледж"</string>
    <string name="PC_mini">"Покровский колледж"</string>

    <string name="college_APT">ГАПОУ РС (Я) «АЛДАНСКИЙ ПОЛИТЕХНИЧЕСКИЙ ТЕХНИКУМ»</string>
    <string name="adress_APT">678901 Республика Саха (Якутия),  г. Алдан, ул. Ленина, д. 36</string>
    <string name="phone_APT">" тел/факс: 8 (41145) 3-31-09, 3-57-89"</string>
    <string name="email_APT">apt_aldan@gov14.ru</string>
    <string name="site_APT">http://aldanpolitehnikum.com/</string>
    <string name="name_dir_APT">Иванов Алексей Венадьевич</string>
    <string name="college_MRTK">ГАПОУ РС (Я) «РЕГИОНАЛЬНЫЙ ТЕХНИЧЕСКИЙ КОЛЛЕДЖ В г. МИРНОМ» </string>
    <string name="name_dir_MRTK">БЕРЕЗОВОЙ  Владимир  Викторович</string>
    <string name="adress_MRTK">678170, Республика Саха (Якутия),  г. Мирный, ул. Ленина, д.1</string>
    <string name="phone_MRTK">" тел/факс: 8 (41136) 3-53-31"</string>
    <string name="email_MRTK">rtkm_mirniy@gov14.ru</string>
    <string name="site_MRTK">https://mrtk-edu.ru/</string>

    <string name="s54_01_02">Ювелир</string>
    <string name="s19_01_04">Пекарь</string>

    <string name="soc_garant">Социальные гарантии</string>
    <string name="gov_ac_st">"Государственная академическая стипендия "</string>
    <string name="gov_soc_st">"Государственная социальная стипендия "</string>
    <string name="mery_soc_pod">"Меры социальной поддержки "</string>
    <string name="pitanie">Меры социальной поддержки (питание)</string>
    <string name="soc_gar_detyam_sir">Государственные гарантии детям-сиротам</string>

    <string name="soc_gar_child">"Детям-сиротам и детям, оставшимся без попечения родителей, лицам из числа детей-сирот и детей, оставшихся без попечения родителей, лицам, потерявшим в период обучения обоих родителей или единственного родителя, обучающимся по очной форме обучения по образовательным программам среднего профессионального образования, профессиональными образовательными организациями, в которых они обучаются, предусматриваются следующие государственные гарантии: выплата государственной социальной стипендии; выплата ежегодного пособия на приобретение учебной литературы и письменных принадлежностей; обеспечение бесплатным питанием, бесплатным комплектом одежды, обуви и мягким инвентарем; обеспечение бесплатным проездом в период обучения и один раз в год к месту жительства и обратно к месту учебы; обеспечение проживанием на период обучения; организация отдыха и оздоровления; выплата выпускникам единовременного денежного пособия и обеспечение бесплатным комплектом одежды, обуви, мягким инвентарем и оборудованием. "</string>

    <string name="gov_ac_st_text">Государственная академическая стипендия - признается денежная выплата, назначаемая обучающимся в целях стимулирования и (или) поддержки освоения ими соответствующих образовательных программ.
С 01 сентября 2019 г. размер норматива государственной академической стипендии составляет в улусах (районах), расположенных до Полярного круга – 1 674 рубля (с учетом районного коэффициента 1,7) и в улусах (районах), расположенных за Полярным кругом – 1 970 рублей (с учетом районного коэффициента 2,0).

Размер стипендии индексируется ежегодно, так в 2020 году увеличение составит 3%, в 2019 - 4%, 2018 - 4%.
Получателями государственной академической стипендии являются студенты очной формы, обучающиеся за счёт средств государственного бюджета Республики Саха (Якутия) - все первокурсники с 1 сентября до первой сессии и после сессии те, кто показал хорошие и отличные успехи в учебе. При этом образовательная организация имеет право повышать размер стипендии в рамках стипендиального фонда. В основном назначаются повышающие коэффициенты «хорошистам» 25% и «отличникам» 50% от размера стипендии.
</string>
    <string name="pitanie_text">"Для обучающихся профессиональных образовательных организаций из малоимущих семей предусмотрена социальная поддержка в виде денежной компенсации за питание в период обучения. Право на получение данной меры социальной поддержки имеют обучающиеся профессиональных образовательных организаций, осваивающие образовательные программы среднего профессионального образования по очной форме обучения за счет средств государственного бюджета Республики Саха (Якутия), предоставившие справку, выданную органом социальной защиты населения по месту жительства, о признании семьи (одиноко проживающего гражданина) малоимущей(-им). "</string>
    <string name="mery_soc_pod_text">"Для обучающихся профессиональных образовательных организаций  из малоимущих семей, зарегистрированных по месту жительства на территории Республики Саха (Якутия), осваивающие образовательные программы среднего профессионального образования по очной форме обучения за счет средств государственного бюджета Республики Саха (Якутия), предусмотрена социальная поддержка по проезду на транспорте в форме компенсации стоимости проезда 1 (один) раз в год до места учебы и обратно к месту жительства.  Для компенсации проездных расходов обучающийся, родитель или законный представитель обучающегося представляют в соответствующую профессиональную образовательную организацию в течение месяца после прибытия к месту учебы следующие документы: а) письменное заявление о предоставлении проездных расходов; б) использованные проездные документы, подтверждающие расходы на проезд, в том числе электронные билеты и контрольные купоны электронных билетов (если на проездном документе не указана его цена, к проездному документу прилагается чек или квитанция, подтверждающая его стоимость, либо справка, заверенная должностным лицом соответствующего предприятия общественного транспорта); в) копию документа, удостоверяющего личность обучающегося; г) справку, выданную органом социальной защиты населения по месту жительства, о признании семьи (одиноко проживающего гражданина) малоимущей(-им). "</string>
    <string name="gov_soc_st_text">"Государственная социальная стипендия назначается студентам очной формы обучения являющимися:  •\tДетьми-сиротами и детьми, оставшимися без попечения родителей; лицами из числа детей-сирот и детей, оставшихся без  попечения родителей, лицами, потерявшими в период обучения обоих родителей или единственного родителя; •\tДетьми-инвалидами, инвалидами I и II групп, инвалидами с детства; •\tСтудентами, подвергшимися воздействию радиации вследствие катастрофы на Чернобыльской АЭС и иных радиационных катастроф, вследствие ядерных испытаний на Семипалатинском полигоне; •\tИнвалидами вследствие военной травмы или заболевания, полученных в период прохождения военной службы, и ветеранами боевых действий, а также студентами из числа граждан, проходивших в течение не менее трех лет военную службу по контракту на воинских должностях, подлежащих замещению солдатами, матросами, сержантами, старшинами, и уволенных с военной службы; •\tСтудентами, предъявившими справку органов социальной защиты, если их семьям или им была оказана социальная помощь.  Размер нормативов на государственную социальную стипендию определяется в полуторакратном размере норматива государственной академической стипендии, установленного решением Правительства Республики Саха (Якутия).  Размер стипендии для студентов профессиональных образовательных организаций Республики Саха (Якутия), обучающихся по очной форме обучения составляет с 01 сентября 2019 года до Полярного круга- 2 511 рублей, за Полярным кругом-2 955 рублей. "</string>

</resources>
