<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/professii"
        style="@style/TextApp"
        android:layout_width="@dimen/shirina_main"
        android:layout_height="73dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/professii"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/specialnosti"
        style="@style/TextApp"
        android:layout_width="@dimen/shirina_main"
        android:layout_height="73dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/specialnosti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <Button
        android:id="@+id/button2"
        style="@style/TextApp"
        android:layout_width="@dimen/shirina_main"
        android:layout_height="73dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/spis_uch"
        style="@style/TextApp"
        android:layout_width="@dimen/shirina_main"
        android:layout_height="73dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/menu_slideshow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"
        style="@style/TextApp"
        android:layout_width="@dimen/shirina_main"
        android:layout_height="73dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

</androidx.constraintlayout.widget.ConstraintLayout>